@@ -7,6 +7,7 @@ Overview of changes in lightdm 1.3.1
       to disk.
     * Write utmp records for sessions
     * Install PAM configuration
+    * Run greeters inside the "lightdm-greeter" PAM service
 
 Overview of changes in lightdm 1.2.0
 
